--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
 	"description": "The API for the contact list application",
 	"main": "app.js",
 	"scripts": {
-		"start": "node server.js",
-		"dev": "nodemon server.js"
+		"start": "node app.js",
+		"dev": "nodemon app.js"
 	},
 	"author": "",
 	"license": "ISC",
@@ -16,7 +16,8 @@
 		"express": "^4.18.1",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.5.4",
-		"morgan": "^1.10.0"
+		"morgan": "^1.10.0",
+		"multer": "^1.4.5-lts.1"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.19"
